--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,16 +127,14 @@
     <ul class='item-lists'>
       <% @items.each do |item|%>
       <li class='list'>
-        <%= link_to "#" do %>
-        
+        <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" if item.image.attached? %>
-
           <% if item.sold_item.present? %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-          <% end  %>
+          <% end %>
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
