--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,12 +30,12 @@
     <%= link_to '削除', "#", method: :delete, class:'item-destroy' %>
      <% end %>
 
-     <% unless user_signed_in? && current_user.id == @item.user_id %>
+     <% if user_signed_in? && (current_user.id != @item.user_id)  %>
      <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
      <% end %>
 
     <div class="item-explain-box">
-      <span><%= "商品説明" %></span>
+      <span><%= @item.explaination %></span>
     </div>
     <table class="detail-table">
       <tbody>
@@ -100,7 +100,7 @@
       後ろの商品 ＞
     </a>
   </div>
-  <a href="#" class='another-item'><%= "商品のカテゴリー名" %>をもっと見る</a>
+  <a href="#" class='another-item'><%= @item.category.name %>をもっと見る</a>
 </div>
 
 <%= render "shared/footer" %>
