--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,10 +31,13 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with model:@order , id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= form_with model: @order_sold , url: item_orders_path , id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+
+    <%= render 'shared/error_messages', model: f.object %>
+    
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
-      <h1 class='info-input-haedline'>
+      <h1 class='info-input-haedline'> 
         クレジットカード情報入力
       </h1>
       <div class="form-group">
