--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,9 +30,9 @@
     <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
      <% end %>
 
-     <% if user_signed_in? && (current_user.id != @item.user_id)  %>
+    <% if @item.sold_item.nil? %>
      <%= link_to '購入画面に進む',item_orders_path(item_id: @item.id),class:"item-red-btn"%>
-     <% end %>
+     <% end %>   
 
     <div class="item-explain-box">
       <span><%= @item.explaination %></span>
