--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -86,11 +86,26 @@
         <br>
         不快な言葉遣いなどは利用制限や退会処分となることがあります。
       </p>
+    
       <button type="submit" class="comment-btn">
         <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
-        <span>コメントする<span>
+         <span>コメントする<span> 
       </button>
     </form>
+
+<%= form_with model: [@item, @comment], class: '"comment-box"', local: true do |f| %>
+  <%# <div class="comment-btn"> %>
+    <%= f.text_area :content, class: "comment-text", placeholder: 'type a message' %>
+  <%# </div> %>
+  <p class="comment-warn">
+    相手のことを考え丁寧なコメントを心がけましょう。
+    <br>
+    不快な言葉遣いなどは利用制限や退会処分となることがあります。
+  </p>
+  <%= f.submit 'コメントする', class: "comment-btn",width:"20",height:"25" %>
+<% end %>
+
+
   </div>
   <div class="links">
     <a href="#" class="change-item-btn">
