見た目修正

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -78,7 +78,7 @@
   </div>
   <%# /商品の概要 %>
 
-  <div class="comment-box">
+  <%# <div class="comment-box">
     <form>
       <textarea class="comment-text"></textarea>
       <p class="comment-warn">
@@ -89,14 +89,14 @@
     
       <button type="submit" class="comment-btn">
         <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
-         <span>コメントする<span> 
+         <%# <span>コメントする<span> 
       </button>
-    </form>
+    </form> %>
+
+<div class="comment-box">
 
 <%= form_with model: [@item, @comment], class: '"comment-box"', local: true do |f| %>
-  <%# <div class="comment-btn"> %>
     <%= f.text_area :content, class: "comment-text", placeholder: 'type a message' %>
-  <%# </div> %>
   <p class="comment-warn">
     相手のことを考え丁寧なコメントを心がけましょう。
     <br>
@@ -104,10 +104,9 @@
   </p>
   <%= f.submit 'コメントする', class: "comment-btn",width:"20",height:"25" %>
 <% end %>
-
-
   </div>
-  <div class="links">
+
+<div class="links">
     <a href="#" class="change-item-btn">
       ＜ 前の商品
     </a>
