--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -96,7 +96,7 @@
 <div class="comment-box">
 
 <%= form_with model: [@item, @comment], class: '"comment-box"', local: true do |f| %>
-    <%= f.text_area :content, class: "comment-text", placeholder: 'type a message' %>
+    <%= f.text_area :comment, class: "comment-text", placeholder: 'コメントを入れてください' %>
   <p class="comment-warn">
     相手のことを考え丁寧なコメントを心がけましょう。
     <br>
@@ -105,6 +105,16 @@
   <%= f.submit 'コメントする', class: "comment-btn",width:"20",height:"25" %>
 <% end %>
   </div>
+
+  <h4>＜コメント一覧＞</h4>
+  <% if @comments %>
+        <% @comments.each do |comment| %>
+          <p>
+            <%= comment.user_id %>
+            <%= comment.comment %>
+          </p>
+        <% end %>
+  <% end %>
 
 <div class="links">
     <a href="#" class="change-item-btn">
